Alterações no Readme.md

--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!--
+    Created by João Victor Sanches Andrade 
+    My GitHub: https://github.com/joaovictorsanchesandrade
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +10,6 @@
     <title></title>
 </head>
 <body>
-    <script src="js/index.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
