Modulos adicionados no HTML

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title></title>
 </head>
 <body>
-    <script src="js/main.js"></script>
+    <script type="module" src="js/services/reddcoin.js"></script>
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
