--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title> </title>
 </head>
 <body>
-    <script type="module" src="js/services/reddcoin.js"></script>
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/pages/index.js"></script>
 </body>
 </html>
